@@ -322,7 +322,7 @@ CompositeReader itsself to build its reader tree. To get all atomic leaves
 of a reader, use IndexReader#leaves(), which also provides the doc base
 of each leave. Readers that are already atomic return itsself as leaf with
 doc base 0. To emulate Lucene 3.x getSequentialSubReaders(),
-use getTopReaderContext().children().
+use getContext().children().
 
 ## LUCENE-2413,LUCENE-3396: Analyzer package changes
 
